# mad-soft-test

./: README.md  docker-compose.yml  image.Dockerfile  mem.Dockerfile  nginx.conf  pyproject.toml
image-service/: main.py  repository.py
mem-service/: config.py  database.py  external.py  main.py  some_test.py
static/: memes.html
