[tool.poetry]
name = "mad-soft-test"
version = "0.1.0"
description = ""
authors = ["David <shagabutdinov.david@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
sqlmodel = { extras = ["asyncio"], version = "^0.0.21" }
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
minio = "^7.2.7"
httpx = "^0.27.0"
pytest = "^8.3.1"
pytest-asyncio = "^0.23.8"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
